--- a/usdlc/index.html
+++ b/usdlc/index.html
@@ -3,8 +3,10 @@
 <h2>
 	<strong>F</strong>ast&nbsp;<strong>I</strong>nteractive&nbsp;<strong>C</strong>onfiguration&nbsp;<strong>L</strong>anguage</h2>
 </div> 
-<div id="s1" class="editable section"><p>
-	The acronym stands for&nbsp;<strong>F</strong>ast&nbsp;<strong>I</strong>nteractive&nbsp;<strong>C</strong>onfiguration&nbsp;<strong>L</strong>anguage.&nbsp;<strong>FICL</strong>&nbsp;is a general library for use within other applications. It is a lightweight small footprint system for providing configuration and workflow capabilities to any application - including those on mobile devices. It is designed for computer-to-computer communications but the code is (vaguely) readable.</p>
+<div id="s1" class="editable section"><div class="workflow taskDetail">Workflow=General;;State=Updated;;Users=Paul Marrington;;Priority=6;;raiseOnStart=true;;raiseOnOverdue=true;;History=<b>12-Nov-12 SPM</b><br><i>Assignee</i>:  -&gt; Paul Marrington
+<br><i>State</i>:  -&gt; Updated
+<br>;;Tasklist=10Checklist...</div><p>
+	The acronym stands for&nbsp;<strong>F</strong>ast&nbsp;<strong>I</strong>ntegrated&nbsp;<strong>C</strong>onfiguration&nbsp;<strong>L</strong>anguage.&nbsp;<strong>FICL</strong>&nbsp;is a general library for use within other applications. It is a lightweight small footprint system for providing configuration and workflow capabilities to any application - including those on mobile devices. It is designed for computer-to-computer communications but the code is (vaguely) readable.</p>
 </div><div id="s8" class="editable section synopsis General page"><div class="sectionType">General</div><h2><a href="Preface" action="page" id="s8a0" class="usdlc">Preface</a></h2></div> 
 <div id="s3" class="editable section synopsis">
  <div class="pageType">
