--- a/usdlc/Project_Design/Vision_InteractiveConfiguration/Capability_TheWord/Feature_beginLeaveEnd/index.html
+++ b/usdlc/Project_Design/Vision_InteractiveConfiguration/Capability_TheWord/Feature_beginLeaveEnd/index.html
@@ -1,6 +1,8 @@
-<div id="pageTitle" class="editable" uuid="6c54d568-588b-4985-987a-cf962e896d9f">
- <h1>begin Leave End</h1>
- <h2></h2>
+<div id="pageTitle" class="editable" uuid="6c54d568-588b-4985-987a-cf962e896d9f"><div class="workflow taskDetail">Workflow=General;;State=Updated;;Priority=6;;raiseOnStart=true;;raiseOnOverdue=true;;History=<b>24-Nov-12 SPM</b><br><i>State</i>:  -&gt; Updated
+<br>;;Tasklist=10Checklist...</div><h1>
+	begin Leave Again</h1>
+<h2>
+	&nbsp;</h2>
 </div>
 <div id="s1" class="editable section">
  <div class="pageType">
