--- a/usdlc/Project_Design/Vision_InteractiveConfiguration/Capability_TheWord/index.html
+++ b/usdlc/Project_Design/Vision_InteractiveConfiguration/Capability_TheWord/index.html
@@ -14,27 +14,37 @@
 	<b class="blue">Why?</b> so that my application footprint is not compromised<br>
 	<b class="blue">Why?</b> I can run it anywhere<br>
 	<b class="blue">Why?</b> to provide platform independence</div>
-</div><div id="s7" class="editable section synopsis Feature page"><div class="sectionType">
-	Feature</div>
+</div><div id="s7" class="editable section synopsis Feature page deleted"><div class="workflowSummary">6</div><div class="sectionType">
+	Feature</div><div class="workflow taskDetail">Priority=6;;raiseOnStart=true;;raiseOnOverdue=true;;History=;;Tasklist=10Checklist...</div>
 <h2>
 	<a class="usdlc" href="Feature_call" id="s7a0" action="page">;call</a></h2>
-</div><div id="s10" class="editable section synopsis Feature page"><div class="sectionType">Feature</div><h2><a href="Feature_;class" action="page" id="s10a0" class="usdlc">;class</a></h2></div><div id="s11" class="editable section synopsis Feature page"><div class="sectionType">
-	Feature</div>
+</div><div id="s10" class="editable section synopsis Feature page deleted"><div class="workflowSummary">Feature - 6</div><div class="sectionType">Feature</div><div class="workflow taskDetail">Workflow=Feature;;Priority=6;;raiseOnStart=true;;raiseOnOverdue=true;;History=<b>24-Nov-12 SPM</b><br><i>Section</i>: Deleted
+<br>;;Tasklist=10Checklist...</div><h2><a href="Feature_;class" action="page" id="s10a0" class="usdlc">;class</a></h2></div><div id="s11" class="editable section synopsis Feature page deleted"><div class="workflowSummary">Feature - 6</div><div class="sectionType">
+	Feature</div><div class="workflow taskDetail">Workflow=Feature;;Priority=6;;raiseOnStart=true;;raiseOnOverdue=true;;History=<b>24-Nov-12 SPM</b><br><i>Section</i>: Deleted
+<br>;;Tasklist=10Checklist...</div>
 <h2>
 	<a class="usdlc data" href="Feature_;field/" id="s11a0" action="page">;field ;get ;set</a></h2>
-</div><div id="s5" class="editable section synopsis Feature page"><div class="sectionType">
-	Feature</div>
+</div><div id="s5" class="editable section synopsis Feature page deleted"><div class="workflowSummary">Feature - 6</div><div class="sectionType">
+	Feature</div><div class="workflow taskDetail">Workflow=Feature;;Priority=6;;raiseOnStart=true;;raiseOnOverdue=true;;History=<b>24-Nov-12 SPM</b><br><i>Section</i>: Deleted
+<br>;;Tasklist=10Checklist...</div>
 <h2>
 	<a class="usdlc" href="Feature_ficl" id="s5a0" action="page">;ficl</a></h2>
-</div><div id="s12" class="editable section synopsis Feature page"><div class="sectionType">Feature</div><h2><a href="Feature_;getWord" action="page" id="s12a0" class="usdlc">;get-word</a></h2></div><div id="s6" class="editable section synopsis Feature page"><div class="sectionType">
-	Feature</div>
+</div><div id="s12" class="editable section synopsis Feature page deleted"><div class="workflowSummary">Feature - 6</div><div class="sectionType">Feature</div><div class="workflow taskDetail">Workflow=Feature;;Priority=6;;raiseOnStart=true;;raiseOnOverdue=true;;History=<b>24-Nov-12 SPM</b><br><i>Section</i>: Deleted
+<br>;;Tasklist=10Checklist...</div><h2><a href="Feature_;getWord" action="page" id="s12a0" class="usdlc">;get-word</a></h2></div><div id="s6" class="editable section synopsis Feature page deleted"><div class="workflowSummary">Feature - 6</div><div class="sectionType">
+	Feature</div><div class="workflow taskDetail">Workflow=Feature;;Priority=6;;raiseOnStart=true;;raiseOnOverdue=true;;History=<b>24-Nov-12 SPM</b><br><i>Section</i>: Deleted
+<br>;;Tasklist=10Checklist...</div>
 <h2>
 	<a class="usdlc" href="Feature_method" id="s6a0" action="page">;method</a></h2>
 </div><div id="s28" class="editable section synopsis Feature page"><div class="sectionType">
 	Feature</div>
 <h2>
 	<a class="usdlc" href="Feature_dec" id="s28a0" action="page">arithmetic (+-*/)</a></h2>
-</div><div id="s27" class="editable section synopsis Feature page"><div class="sectionType">Feature</div><h2><a href="Feature_beginLeaveEnd" action="page" id="s27a0" class="usdlc">begin leave end</a></h2></div><div id="s17" class="editable section synopsis Feature page"><div class="sectionType">
+</div><div id="s27" class="editable section synopsis Feature page"><div class="workflowSummary">Feature - Updated - 6</div><div class="sectionType">
+	Feature</div><div class="workflow taskDetail">Workflow=Feature;;State=Updated;;Priority=6;;raiseOnStart=true;;raiseOnOverdue=true;;History=<b>24-Nov-12 SPM</b><br><i>State</i>:  -&gt; Updated
+<br>;;Tasklist=10Checklist...</div>
+<h2>
+	<a class="usdlc" href="Feature_beginLeaveEnd" id="s27a0" action="page">begin leave again</a></h2>
+</div><div id="s17" class="editable section synopsis Feature page"><div class="sectionType">
 	Feature</div>
 <h2>
 	<a class="usdlc" href="Feature_and" id="s17a0" action="page">boolean - and or not</a></h2>
