simplify for J2ME

--- a/usdlc/Project_Design/Vision_InteractiveConfiguration/Capability_TheWord/Feature_immediate/index.html
+++ b/usdlc/Project_Design/Vision_InteractiveConfiguration/Capability_TheWord/Feature_immediate/index.html
@@ -18,8 +18,9 @@
  <p> &nbsp;</p> 
  <p> The native code will retrieve all text from the imput stream until another double-quote is found and push the resulting string on the stack as a literal. Many immediates act on both compile and run phases. This string literal collects the string in compile phase and pushes a reference to it in a run phase.</p> 
 </div>
-<div id="s4" class="editable section synopsis Scenario"><div class="sectionType">
-	Scenario</div>
+<div id="s4" class="editable section synopsis Scenario"><div class="workflowSummary">Scenario - Updated - 6</div><div class="sectionType">
+	Scenario</div><div class="workflow taskDetail">Workflow=Scenario;;State=Updated;;Priority=6;;raiseOnStart=true;;raiseOnOverdue=true;;History=<b>19-Dec-12 SPM</b><br><i>State</i>:  -&gt; Updated
+<br>;;Tasklist=10Checklist...</div>
 <h2>
 	<span>Compile-time<span class="givenWhenThen"> &nbsp;(<a class="usdlc sourceLink" href="Given_CompileTime.gwt" id="s4a0g" action="runnable">G</a><a class="usdlc sourceLink changed" href="When_CompileTime.gwt" id="s4a0w" action="runnable">W</a><a class="usdlc sourceLink changed" href="Then_CompileTime.gwt" id="s4a0t" action="runnable">T</a>)</span></span></h2>
 <p>
