--- a/usdlc/Project_Design/Vision_InteractiveConfiguration/Capability_TheWord/index.html
+++ b/usdlc/Project_Design/Vision_InteractiveConfiguration/Capability_TheWord/index.html
@@ -66,12 +66,14 @@
 	Feature</div>
 <h2>
 	<a class="usdlc" href="Feature_Print" id="s16a0" action="page">Print (.)</a></h2>
-</div><div id="s23" class="editable section synopsis Feature page"><div class="sectionType">Feature</div><h2><a href="Feature_push" action="page" id="s23a0" class="usdlc">push</a></h2></div><div id="s24" class="editable section synopsis Feature page"><div class="sectionType">Feature</div><h2><a href="Feature_random" action="page" id="s24a0" class="usdlc">random</a></h2></div><div id="s26" class="editable section synopsis Feature page"><div class="sectionType">Feature</div><h2><a href="Feature_return" action="page" id="s26a0" class="usdlc">return</a></h2></div><div id="s14" class="editable section synopsis Feature page"><div class="sectionType">
+</div><div id="s23" class="editable section synopsis Feature page deleted"><div class="workflowSummary">Feature - 6</div><div class="sectionType">Feature</div><div class="workflow taskDetail">Workflow=Feature;;Priority=6;;raiseOnStart=true;;raiseOnOverdue=true;;History=<b>19-Dec-12 SPM</b><br><i>Section</i>: Deleted
+<br>;;Tasklist=10Checklist...</div><h2><a href="Feature_push" action="page" id="s23a0" class="usdlc">push</a></h2></div><div id="s24" class="editable section synopsis Feature page"><div class="sectionType">Feature</div><h2><a href="Feature_random" action="page" id="s24a0" class="usdlc">random</a></h2></div><div id="s26" class="editable section synopsis Feature page"><div class="sectionType">Feature</div><h2><a href="Feature_return" action="page" id="s26a0" class="usdlc">return</a></h2></div><div id="s14" class="editable section synopsis Feature page"><div class="sectionType">
 	Feature</div>
 <h2>
 	<a class="usdlc" href="Feature_StringLiteral" id="s14a0" action="page">String literal (")</a></h2>
-</div><div id="s15" class="editable section synopsis Feature page"><div class="sectionType">
-	Feature</div>
+</div><div id="s15" class="editable section synopsis Feature page deleted"><div class="workflowSummary">Feature - 6</div><div class="sectionType">
+	Feature</div><div class="workflow taskDetail">Workflow=Feature;;Priority=6;;raiseOnStart=true;;raiseOnOverdue=true;;History=<b>19-Dec-12 SPM</b><br><i>Section</i>: Deleted
+<br>;;Tasklist=10Checklist...</div>
 <h2>
 	<a class="usdlc" href="Feature_StringFormatter" id="s15a0" action="page">String format ("%...%")</a></h2>
 </div><div id="s25" class="editable section synopsis Feature page"><div class="sectionType">Feature</div><h2><a href="Feature_variable" action="page" id="s25a0" class="usdlc">variable</a></h2></div>
