--- a/usdlc/Project_Design/Vision_InteractiveConfiguration/Capability_TheWord/Feature_and/index.html
+++ b/usdlc/Project_Design/Vision_InteractiveConfiguration/Capability_TheWord/Feature_and/index.html
@@ -22,16 +22,18 @@
 	b1 <strong><span style="background-color:#ffa07a;">not</span></strong> </code></div>
 </div>
 <div id="s4" class="editable section synopsis Scenario">
- <div class="sectionType">
+ <div class="workflowSummary">Scenario - Updated - 6</div><div class="sectionType">
   Scenario
- </div>
- <h2><span>and<span class="givenWhenThen"> &nbsp;(<a href="Given_and.gwt" action="runnable" id="s4a0g" class="usdlc">G</a><a href="When_and.gwt" action="runnable" id="s4a0w" class="usdlc">W</a><a href="Then_and.gwt" action="runnable" id="s4a0t" class="usdlc">T</a>)</span></span></h2>
+ </div><div class="workflow taskDetail">Workflow=Scenario;;State=Updated;;Priority=6;;raiseOnStart=true;;raiseOnOverdue=true;;History=<b>19-Dec-12 SPM</b><br><i>State</i>:  -&gt; Updated
+<br>;;Tasklist=10Checklist...</div>
+ <h2><span>and<span class="givenWhenThen"> &nbsp;(<a href="Given_and.gwt" action="runnable" id="s4a0g" class="usdlc">G</a><a href="When_and.gwt" action="runnable" id="s4a0w" class="usdlc changed">W</a><a href="Then_and.gwt" action="runnable" id="s4a0t" class="usdlc changed">T</a>)</span></span></h2>
 </div>
 <div id="s5" class="editable section synopsis Scenario">
- <div class="sectionType">
+ <div class="workflowSummary">Scenario - Updated - 6</div><div class="sectionType">
   Scenario
- </div>
- <h2><span>or<span class="givenWhenThen"> &nbsp;(<a href="Given_or.gwt" action="runnable" id="s5a0g" class="usdlc">G</a><a href="When_or.gwt" action="runnable" id="s5a0w" class="usdlc">W</a><a href="Then_or.gwt" action="runnable" id="s5a0t" class="usdlc">T</a>)</span></span></h2>
+ </div><div class="workflow taskDetail">Workflow=Scenario;;State=Updated;;Priority=6;;raiseOnStart=true;;raiseOnOverdue=true;;History=<b>19-Dec-12 SPM</b><br><i>State</i>:  -&gt; Updated
+<br>;;Tasklist=10Checklist...</div>
+ <h2><span>or<span class="givenWhenThen"> &nbsp;(<a href="Given_or.gwt" action="runnable" id="s5a0g" class="usdlc">G</a><a href="When_or.gwt" action="runnable" id="s5a0w" class="usdlc changed">W</a><a href="Then_or.gwt" action="runnable" id="s5a0t" class="usdlc changed">T</a>)</span></span></h2>
 </div>
 <div id="s6" class="editable section synopsis Scenario">
  <div class="sectionType">
