not erroring on unknown word

--- a/usdlc/Project_Design/Vision_InteractiveConfiguration/Capability_TheWord/index.html
+++ b/usdlc/Project_Design/Vision_InteractiveConfiguration/Capability_TheWord/index.html
@@ -14,7 +14,7 @@
 	<b class="blue">Why?</b> so that my application footprint is not compromised<br>
 	<b class="blue">Why?</b> I can run it anywhere<br>
 	<b class="blue">Why?</b> to provide platform independence</div>
-</div><div id="s7" class="editable section synopsis Feature page deleted"><div class="workflowSummary">6</div><div class="sectionType">
+</div><div id="s29" class="editable section synopsis Scenario"><div class="sectionType">Scenario</div><h2><span>Test unknown word<span class="givenWhenThen"> &nbsp;(<a href="Given_TestUnknownWord.gwt" action="runnable" id="s29a0g" class="usdlc">G</a><a href="When_TestUnknownWord.gwt" action="runnable" id="s29a0w" class="usdlc">W</a><a href="Then_TestUnknownWord.gwt" action="runnable" id="s29a0t" class="usdlc">T</a>)</span></span></h2></div><div id="s7" class="editable section synopsis Feature page deleted"><div class="workflowSummary">6</div><div class="sectionType">
 	Feature</div><div class="workflow taskDetail">Priority=6;;raiseOnStart=true;;raiseOnOverdue=true;;History=;;Tasklist=10Checklist...</div>
 <h2>
 	<a class="usdlc" href="Feature_call" id="s7a0" action="page">;call</a></h2>
