--- a/usdlc/Project_Design/Vision_InteractiveConfiguration/Capability_TheWord/Feature_Print/index.html
+++ b/usdlc/Project_Design/Vision_InteractiveConfiguration/Capability_TheWord/Feature_Print/index.html
@@ -16,10 +16,11 @@
 	<code>item <span style="background-color:#ffa07a;">.</span></code></div>
 </div>
 <div id="s4" class="editable section synopsis Scenario">
- <div class="sectionType">
+ <div class="workflowSummary">Scenario - Updated - 6</div><div class="sectionType">
   Scenario
- </div>
- <h2><span>Print<span class="givenWhenThen"> &nbsp;(<a href="Given_Print.gwt" action="runnable" id="s4a0g" class="usdlc">G</a><a href="When_Print.gwt" action="runnable" id="s4a0w" class="usdlc">W</a><a href="Then_Print.gwt" action="runnable" id="s4a0t" class="usdlc">T</a>)</span></span></h2>
+ </div><div class="workflow taskDetail">Workflow=Scenario;;State=Updated;;Priority=6;;raiseOnStart=true;;raiseOnOverdue=true;;History=<b>01-Jan-13 admin</b><br><i>State</i>:  -&gt; Updated
+<br>;;Tasklist=10Checklist...</div>
+ <h2><span>Print<span class="givenWhenThen"> &nbsp;(<a href="Given_Print.gwt" action="runnable" id="s4a0g" class="usdlc">G</a><a href="When_Print.gwt" action="runnable" id="s4a0w" class="usdlc changed">W</a><a href="Then_Print.gwt" action="runnable" id="s4a0t" class="usdlc changed">T</a>)</span></span></h2>
 </div> 
 <div id="s2" class="editable section footer synopsis"> 
  <div> 
