--- a/usdlc2/Reference.html
+++ b/usdlc2/Reference.html
@@ -46,7 +46,9 @@ gwt.file_processor.ficl = (name, next) -&gt;
 [ 1 2 0 ] and              0 expected
 [ 11 1 3 ] and             1 expected
 [ 1 2 3 ] +                6 expected
-[ ' a' ' b' ' c' ] ""      " abc" expected</pre>
+[ ' a' ' b' ' c' ] ""      " abc" expected
+[ 1 2 ] +                  3 expected
+[ 5 ] +                    5 expected</pre>
 
 <p style="display: block;"><br />
 <textarea readonly="readonly" source="true" style="display: none;" type="gwt.coffee"></textarea></p>
